[workspace.package]
authors = ["Nova Labs <info@nova-labs.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/helium/helium-wallet-rs"

[workspace]
members = [
    "helium-wallet",
    "helium-lib",
    "helium-mnemonic"
]
resolver = "2"

[workspace.dependencies]
sha2 = "0.10"
base64 = ">=0.21"
chrono = {version = "0", features = ["serde"]}
serde = "1"
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-float"] }
helium-crypto = { version = "0.8" }
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
    "services",
] }
clap = { version = "4", features = ["derive"] }

# When attempting to test lcoal changes without needing to push a branch you can
# patch the github url to point to your local proto repo.
#
#
# [patch.'https://github.com/helium/helium-anchor-gen']
# helium-anchor-gen = { path = "../helium-anchor-gen" }
