[workspace.package]
authors = ["Nova Labs <info@nova-labs.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/helium/helium-wallet-rs"

[workspace]
members = [
  "helium-wallet",
  "helium-lib",
  "helium-proto-crypto",
  # "helium-mnemonic"
]
resolver = "2"

[workspace.dependencies]
sha2 = "0.10"
base64 = ">=0.21"
chrono = { version = "0", features = ["serde"] }
serde = "1"
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-float"] }
helium-crypto = { version = "0.9" }
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
  "services",
] }
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.17"
prost = "0.14.1"
msg-signature = { git = "https://github.com/helium/proto", branch = "connor/msg-sign-trait" }

[patch.crates-io]
anchor-lang = { git = "https://github.com/madninja/anchor.git", branch = "madninja/const_pubkey" }
