[workspace.package]
authors = ["Nova Labs <info@nova-labs.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/helium/helium-wallet-rs"

[workspace]
members = [
  "helium-wallet",
  "helium-lib",
  "helium-proto-crypto",
  "helium-mnemonic",
]
resolver = "2"

[workspace.dependencies]
sha2 = "0.10"
base64 = ">=0.21"
chrono = { version = "0", features = ["serde"] }
serde = "1"
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-float"] }
helium-crypto = { version = "0.11" }
helium-proto = { git = "https://github.com/helium/proto", rev = "e81cec790eca9a5bd3bebc8df78b4eb190949013", features = [
  "services",
] }
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.17"
futures = "0"
prost = "0.14.1"
msg-signature = { git = "https://github.com/helium/proto", rev = "e81cec790eca9a5bd3bebc8df78b4eb190949013" }

[patch.crates-io]
anchor-lang = { git = "https://github.com/madninja/anchor.git", rev = "1dfe80386037379325c30095dcdb51e152c1e3c5" }
