[package]
name = "helium-lib"
edition.workspace = true
authors.workspace = true
license.workspace = true
version = "0.1.1"

[features]
clap = ["dep:clap"]
mnemonic = ["helium-mnemonic"]

[dependencies]
hex = "0.4"
chrono = { workspace = true }
thiserror = "1"
async-trait = "0"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = { git = "https://github.com/madninja/anchor", branch = "madninja/const_pubkey", features = [
  "idl-build",
  "derive",
] }
anchor-spl = { version = "0.31.1", features = ["mint", "token"] }
# curve25519-dalek = "3.2.1"
url = { version = "2", features = ["serde"] }
h3o = { version = "0", features = ["serde"] }
helium-crypto = { workspace = true }
itertools = "0.14"
# https://github.com/thomaseizinger/rust-jsonrpc-client/pull/51
# jsonrpc_client = { version = "0.7", features = ["reqwest"] }
jsonrpc_client = { git = "https://github.com/delta1/rust-jsonrpc-client.git", branch = "master", features = [
  "reqwest",
] }
futures = "*"
tracing = "0"
base64 = { workspace = true }
solana-sdk = "2.3.1"
solana-program = "2.3.0"
solana-client = "2.3.5"
solana-transaction-status = "2.3.5"
solana-system-interface = { git = "https://github.com/solana-program/system.git", tag = "solana-system-interface-v1.0.0", features = [
  "bincode",
] }
bincode = "1.3.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-memo = "6"
pyth-solana-receiver-sdk = "^0.6"
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = "1"
rust_decimal = { workspace = true }
helium-proto = { workspace = true }
angry-purple-tiger = "1"
sha2 = { workspace = true }
clap = { workspace = true, optional = true }
helium-mnemonic = { path = "../helium-mnemonic", optional = true }
bytemuck = "1"
solana-transaction-utils = { version = ">= 0.4" }
tuktuk-sdk = { git = "https://github.com/helium/tuktuk.git", branch = "main" }

[dev-dependencies]
rand = "0.8"
