[package]
name = "helium-lib"
edition.workspace = true
authors.workspace = true
license.workspace = true
version = "0.2.0"

[features]
clap = ["dep:clap"]
mnemonic = ["helium-mnemonic"]

[dependencies]
hex = "0.4"
chrono = { workspace = true }
thiserror = "1"
async-trait = "0"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = { git = "https://github.com/madninja/anchor", rev = "1dfe80386037379325c30095dcdb51e152c1e3c5", features = [
  "idl-build",
  "derive",
] }
anchor-spl = { version = "0.31.1", features = ["mint", "token"] }
# curve25519-dalek = "3.2.1"
url = { version = "2", features = ["serde"] }
h3o = { version = "0", features = ["serde"] }
helium-crypto = { workspace = true }
itertools = "0.14"
jsonrpc_client = { version = "0.7", features = ["reqwest"] }
futures.workspace = true
futures-timer = "3"
backon = { version = "1", default-features = false, features = ["std", "futures-timer-sleep"] }
tracing = "0"
base64 = { workspace = true }
solana-sdk = "2.2.1"
solana-program = "2.2.1"
solana-client = "2.2.3"
solana-transaction-status = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
bincode = "1.3.3"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-memo = "6"
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = "1"
rust_decimal = { workspace = true }
helium-proto = { workspace = true }
angry-purple-tiger = "1"
sha2 = { workspace = true }
clap = { workspace = true, optional = true }
helium-mnemonic = { path = "../helium-mnemonic", optional = true }
bytemuck = "1"
solana-transaction-utils = { version = ">= 0.4" }
tuktuk-sdk = { git = "https://github.com/helium/tuktuk.git", rev = "1b281ae0189e96dfaf27c7206ad2e72b98a5fb34" }
squads-multisig-program = { git = "https://github.com/Squads-Protocol/v4.git", rev = "edbca83427b10cbe58bf65fc9b597e8eb7b17cc1", default-features = false, features = ["no-entrypoint"] }
dirs = "5"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
