[package]
name = "helium-proto-crypto"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
helium-crypto = "0.9.4"
thiserror = "1.0.69"
prost = "0.14.1"
msg-signature = { git = "https://github.com/helium/proto", branch = "connor/move-msg-verify" }