[package]
name = "helium-wallet"
description = "A Helium Wallet CLI"
version = "2.0.1"
readme = "../README.md"
keywords = ["helium", "blockchain", "wallet"]
publish = false
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "helium-wallet"
path = "src/main.rs"
doc = false

[dependencies]
aes-gcm = "0"
anyhow = "1"
async-trait = "0.1.85"
byteorder = "1.3.2"
dialoguer = "0.8"
futures = "0.3.31"
helium-lib = { path = "../helium-lib", features = ["clap", "mnemonic"] }
pbkdf2 = "0.12"
qr2term = "0.2"
rand = "0.8"
shamirsecretsharing = { version = "0.1.5", features = ["have_libsodium"] }
sodiumoxide = "~0.2"
tokio = { version = "1.0", features = ["full"] }

clap = { workspace = true }
helium-crypto = { workspace = true, features = ["multisig", "solana"] }
helium-mnemonic = { path = "../helium-mnemonic" }
helium-proto = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
